amma in my new blog

--- a/start.html
+++ b/start.html
@@ -11,7 +11,7 @@
     <h3>New destination</h3>
     <div>
         <h3>New blog</h3>
-        <h5>Look mama, i can write a blog</h5>
+        <h5>Look mama jaan, i can write a blog. I love you!</h5>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi modi nobis aliquam dolore totam at nulla aperiam ipsum, minus harum temporibus quidem sit iure quisquam sapiente impedit est ad optio earum in esse enim cumque accusantium quaerat. Aliquid, dicta inventore!</p>
     </div>
     <img src="Allah-Arabic Calligraphy.jpg" alt="">
